--- a/EmployeeLogin/WebContent/templates/header.xhtml
+++ b/EmployeeLogin/WebContent/templates/header.xhtml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!--
+ * CSCI 2999 Capstone Project
+ * Waystone Property Management Intranet
+ * header.xhtml
+ * @author KWelzbacher 
+ -->
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
@@ -62,7 +68,7 @@
                                                 <h:link value="Create New Request" outcome="createMaintenance" class="content"/> 
                                         </div>
                             </li>
-                            <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
+                            <li class="navList"><h:link value="Training and Documents" outcome="training" class="link"/></li>
                             <li class="navList dropdown">
                             	<h:link value="Additional Company Information" outcome="companyInfo" class="link"/>
                             		<div class="dropdown-content">
