--- a/EmployeeLogin/WebContent/templates/content.xhtml
+++ b/EmployeeLogin/WebContent/templates/content.xhtml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!--
+ * CSCI 2999 Capstone Project
+ * Waystone Property Management Intranet
+ * content.xhtml
+ * @author KWelzbacher 
+ -->
+
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
           
