--- a/TenantPortal/WebContent/templates/header.xhtml
+++ b/TenantPortal/WebContent/templates/header.xhtml
@@ -32,7 +32,7 @@
 								outcome="TenantMaintenance.xhtml" class="link" /></li>
 						<li class="navList"><h:link value="Profile"
 								outcome="TenantProfile.xhtml" class="link" /></li>
-						<li class="navList"><h:link value="Contact"
+						<li class="navList"><h:link value="Property Info"
 								outcome="TenantHelp.xhtml" class="link" /></li>
 					</ul>
 				</div>
