--- a/EmployeeLogin/WebContent/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/WebContent/resources/css/waystoneEmployee.css
@@ -499,7 +499,7 @@ html body{
 	}
     
 }
-@media screen and (min-width:1790px) and (max-width:1805px){
+@media screen and (min-width:1790px) and (max-width:1905px){
     .primary-nav-wrap {
 		display: none !important;
 	}
@@ -543,7 +543,7 @@ html body{
 	}
     
 }
-@media screen and (min-width:1901px) {
+@media screen and (min-width:1905px) {
     .primary-nav-wrap {
 		display: none !important;
 	}
@@ -696,16 +696,19 @@ div ul {
     text-align: center;
     background: none repeat scroll 0 0 #D0E2F5;  
     border-top: 1px solid #BBBBBB;
+    border-bottom: 1px solid #BBBBBB;
     padding-left: 10px;
 }
 .table-even{
     text-align: center;
     background: none repeat scroll 0 0 rgba(255,255,255,1);
     border-top: 1px solid #BBBBBB;
+    border-bottom: 1px solid #BBBBBB;
     padding-left: 10px;
 }
-.name{
+.balName{
 	text-align:left !important;
+	width:200px;
 }
 .recordNum{
 	text-align:left !important;
@@ -883,6 +886,10 @@ div ul {
 .midRight{
 	padding-right:20px;
 }
+.empMLeft{
+	padding-right:18px;
+}
+
 .firstRight{
 	padding-left: 32px;
 	padding-right: 20px;
@@ -894,12 +901,12 @@ div ul {
 	padding-left:88px;
 	padding-right:20px;
 }
-
-.staLeft{
-	padding-right:50px;
+.empLLeft{
+	padding-left:18px;
 }
+
 .zRight{
-	padding-left:20px;
+	padding-left:21px;
 }
 .empAddRight{
 	padding-left:55px;
@@ -923,6 +930,7 @@ div ul {
 }
 .amount{
 	text-align: right;
+	float:right;
 }
 .conMess{
 	max-width:200px;
@@ -984,4 +992,12 @@ div ul {
 #loader{
 	text-align:center;
 	margin:auto;
+}
+#balanceSheet{
+	float:left;
+	width:50%;
+}
+#profitLoss{
+	float:right;
+	width:50%;
 }
